# backend/src/main/java/de/bund/digitalservice/ris/search/controller/api/NormsController.java
@@ -5,18 +5,23 @@ import static org.springframework.http.HttpHeaders.CONTENT_DISPOSITION;
 import de.bund.digitalservice.ris.search.config.ApiConfig;
 import de.bund.digitalservice.ris.search.exception.CustomValidationException;
 import de.bund.digitalservice.ris.search.exception.ObjectStoreServiceException;
+import de.bund.digitalservice.ris.search.mapper.ChangelogResponseMapper;
 import de.bund.digitalservice.ris.search.mapper.NormSchemaMapper;
 import de.bund.digitalservice.ris.search.mapper.NormSearchResponseMapper;
 import de.bund.digitalservice.ris.search.mapper.SortParamsConverter;
+import de.bund.digitalservice.ris.search.models.DocumentKind;
+import de.bund.digitalservice.ris.search.models.api.parameters.ChangelogParams;
 import de.bund.digitalservice.ris.search.models.api.parameters.NormsSearchParams;
 import de.bund.digitalservice.ris.search.models.api.parameters.NormsSortParam;
 import de.bund.digitalservice.ris.search.models.api.parameters.PaginationParams;
 import de.bund.digitalservice.ris.search.models.api.parameters.UniversalSearchParams;
 import de.bund.digitalservice.ris.search.models.opensearch.Norm;
+import de.bund.digitalservice.ris.search.schema.ChangelogResponse;
 import de.bund.digitalservice.ris.search.schema.CollectionSchema;
 import de.bund.digitalservice.ris.search.schema.LegislationExpressionSchema;
 import de.bund.digitalservice.ris.search.schema.LegislationExpressionSearchSchema;
 import de.bund.digitalservice.ris.search.schema.SearchMemberSchema;
+import de.bund.digitalservice.ris.search.service.ChangelogService;
 import de.bund.digitalservice.ris.search.service.NormsService;
 import de.bund.digitalservice.ris.search.service.xslt.NormXsltTransformerService;
 import de.bund.digitalservice.ris.search.utils.LuceneQueryTools;
@@ -37,6 +42,7 @@ import java.util.List;
 import java.util.Optional;
 import org.springdoc.core.annotations.ParameterObject;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.elasticsearch.UncategorizedElasticsearchException;
@@ -48,6 +54,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.servlet.mvc.method.annotation.StreamingResponseBody;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 /** Controller class for handling REST API requests for legislation. */
 @RestController
@@ -76,6 +83,7 @@ public class NormsController {
 
   private final NormsService normsService;
   private final NormXsltTransformerService xsltTransformerService;
+  private final ChangelogService changelogService;
 
   /**
    * Constructor for the NormsController class.
@@ -85,9 +93,12 @@ public class NormsController {
    */
   @Autowired
   public NormsController(
-      NormsService normsService, NormXsltTransformerService xsltTransformerService) {
+      NormsService normsService,
+      NormXsltTransformerService xsltTransformerService,
+      @Qualifier(value = "normsChangelogService") ChangelogService changelogService) {
     this.normsService = normsService;
     this.xsltTransformerService = xsltTransformerService;
+    this.changelogService = changelogService;
   }
 
   /**
@@ -645,6 +656,18 @@ public class NormsController {
             body ->
                 ResponseEntity.status(HttpStatus.OK).header("Content-Type", mimeType).body(body))
         .orElseGet(() -> ResponseEntity.notFound().build());
+  }
+
+  @GetMapping(path = ApiConfig.Paths.LEGISLATION_CHANGELOGS)
+  public ResponseEntity<ChangelogResponse> getChangelogs(
+      @ParameterObject @Valid ChangelogParams params) {
+
+    var changelog =
+        changelogService.parseAndMergeChangelogsBetween(
+            params.getFrom().toInstant(), params.getTo().toInstant());
+    var baseUrl = ServletUriComponentsBuilder.fromCurrentContextPath().build().toUriString();
+    return ResponseEntity.ok(
+        ChangelogResponseMapper.mapChangelog(changelog, baseUrl, DocumentKind.LEGISLATION));
   }
 
   /**
